--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,19 +1,22 @@
+---
+import Marque from "./marque.astro"
+--- 
+
 <footer class="my-20">
-  <p class="text-center text-sm text-slate-500">
-    Copyright © {new Date().getFullYear()} Astroship. All rights reserved.
-  </p>
-  <!--
-    Can we ask you a favor 🙏
-    Please keep this backlink on your website if possible.
-    or Purchase a commercial license from https://web3templates.com
-  -->
-  <p class="text-center text-xs text-slate-500 mt-1">
-    Made by <a
-      href="https://web3templates.com"
-      target="_blank"
-      rel="noopener"
-      class="hover:underline">
-      Web3Templates
-    </a>
-  </p>
+<p class="text-center text-sm text-slate-500">
+  Copyright © {new Date().getFullYear()} MAXIVId&a solutions. All rights reserved.
+</p>
+<!--
+  Can we ask you a favor 🙏
+  Please keep this backlink on your website if possible.
+  or Purchase a commercial license from https://web3templates.com
+-->
+<p class="text-center text-xs text-slate-500 mt-1">
+  Made by <a
+    target="_blank"
+    rel="noopener"
+    class="hover:underline">
+    Ximena Zuluaga Buritica - Mariana Yang - Violeta Nieto Jiménez - Daniel Aparisi Lozano
+  </a>
+</p>
 </footer>
