--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -11,8 +11,8 @@ import { Icon } from "astro-icon/components";
     <Icon class="size-8 md:size-12" name="simple-icons:svelte" />
     <Icon class="size-8 md:size-12" name="simple-icons:astro" />
     <Icon class="size-8 md:size-16" name="simple-icons:tailwindcss" />
-    <Icon class="size-8 md:size-16" name="simple-icons:alpinedotjs" />
     <Icon class="size-8 md:size-12" name="simple-icons:vercel" />
+    <img src="../../public/tercios.svg" alt="" class="size-8 md:size-12">
 
   </div>
 </div>
