--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,9 +4,9 @@ import { Icon } from "astro-icon/components";
 
 const features = [
   {
-    title: "Bring Your Own Framework",
+    title: "lorem impsun",
     description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
+      "dmdvjnfsakmnv jf kslasmoiknf vjiefknmdol",
     icon: "bx:bxs-briefcase",
   },
   {
@@ -44,7 +44,7 @@ const features = [
 
 <div class="mt-16 md:mt-0">
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Everything you need to start a website
+    Aqui esta  Todo lo que necesitas para Escalar al proximo nivel 
   </h2>
   <p class="text-lg mt-4 text-slate-600">
     Astro comes batteries included. It takes the best parts of state-of-the-art
