--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -16,26 +16,21 @@ const menuitems = [
     ],
   },
   {
-    title: "Pricing",
+    title: "¿ Que hacemos ?",
     path: "/pricing",
   },
   {
-    title: "About",
+    title: "Nosotros",
     path: "/about",
   },
   {
-    title: "Blog",
+    title: "Historia",
     path: "/blog",
   },
   {
-    title: "Contact",
+    title: "Contactanos",
     path: "/contact",
-  },
-  {
-    title: "Pro Version",
-    badge: true,
-    path: "https://astroship-pro.web3templates.com/",
-  },
+  }
 ];
 ---
 
@@ -44,8 +39,8 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
+          ><span class="font-bold text-slate-800">MAXIVId&a </span><span
+            class="text-slate-500">solutions</span
           >
         </a>
         <div class="block lg:hidden">
@@ -71,11 +66,6 @@ const menuitems = [
                       href={item.path}
                       class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
                       <span> {item.title}</span>
-                      {item.badge && (
-                        <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
-                          New
-                        </span>
-                      )}
                     </a>
                   </li>
                 )}
@@ -84,15 +74,14 @@ const menuitems = [
           }
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
+          <Link href="#" style="muted" block size="md">Iniciar sesion</Link>
+         
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <Link href="#" size="md">Iniciar session</Link>
       </div>
     </div>
   </header>
