--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -16,20 +16,16 @@ const menuitems = [
     ],
   },
   {
-    title: "¿ Que hacemos ?",
-    path: "/pricing",
-  },
-  {
     title: "Nosotros",
-    path: "/about",
+    path: "#",
   },
   {
-    title: "Historia",
-    path: "/blog",
+    title: "¿Que hacemos?",
+    path: "#",
   },
   {
     title: "Contactanos",
-    path: "/contact",
+    path: "#",
   }
 ];
 ---
