--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import logoImg from "@/assets/logoImg.png"
+import logoImg from "@/assets/logoImg.jpg"
 ---
 
 <main
