--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 
 const features = [
   {
-    title: "lorem impsun",
+    title: "Digitalizaccion del sector ",
     description:
       "dmdvjnfsakmnv jf kslasmoiknf vjiefknmdol",
     icon: "bx:bxs-briefcase",
