--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,16 +1,27 @@
 ---
-import Link from "./ui/link.astro";
 ---
 
-<div
-  class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
-  <h2 class="text-white text-4xl md:text-6xl tracking-tight">
-    ¿ A que esperas ? 
-  </h2>
-  <p class="text-slate-400 mt-4 text-lg md:text-xl">
-    Empieza ya con nosotros para descubirir un mundo nuevo de oprotunidades y estrategias
-  </p>
-  <div class="flex mt-5">
-    <Link href="#" style="inverted">Vamooos</Link>
-  </div>
-</div>
+
+</form>
+
+
+
+<style>
+  .invalid-feedback,
+  .empty-feedback {
+    display: none;
+  }
+  
+  .was-validated :placeholder-shown:invalid ~ .empty-feedback {
+    display: block;
+  }
+  
+  .was-validated :not(:placeholder-shown):invalid ~ .invalid-feedback {
+    display: block;
+  }
+  
+  .is-invalid,
+  .was-validated :invalid {
+    border-color: #dc3545;
+  }
+  </style>
