--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -4,16 +4,18 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div class="mt-24">
-  <h2 class="text-center text-slate-500">Nuestros Patrocinadores</h2>
+  <h2 class="text-center text-slate-500">Colaboramos con</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
 
-    <Icon class="size-8 md:size-12" name="simple-icons:react" />
-    <Icon class="size-8 md:size-12" name="simple-icons:svelte" />
-    <Icon class="size-8 md:size-12" name="simple-icons:astro" />
-    <Icon class="size-8 md:size-16" name="simple-icons:tailwindcss" />
-    <Icon class="size-8 md:size-12" name="simple-icons:vercel" />
-    
-    <img src="../../public/tercios.svg" alt="" class="size-8 md:size-12">
+    <img src="../../src/assets/Greenpeace_logo.svg" alt="size-8 md:size-12" class=" size-16 md:size-12">
+    <img src="../../src/assets/Media_Markt_logo.svg" alt="" class="size-20 md:size-12">
+    <img src="../../src/assets/universidad_de_alcala.png" alt="" class="size-20 md:size-12 w-[151]">
+   
 
   </div>
 </div>
+<style>
+  img{
+    width: 151px;
+  }
+</style>
