--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,39 +4,39 @@ import { Icon } from "astro-icon/components";
 
 const features = [
   {
-    title: "Digitalizaccion del sector ",
+    title: "Software Open-source",
     description:
-      "dmdvjnfsakmnv jf kslasmoiknf vjiefknmdol",
+      " Utilizamos software open course pasa desarrollar coomo es el caso de Tensor IA y tambien Servidores en la nube AWS para garantizar escalabilidad ",
     icon: "bx:bxs-briefcase",
   },
   {
-    title: "100% Static HTML, No JS",
+    title: "Industria e innovación",
     description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
+      "Nuestro software fomenta la innovación tecnológica y mejora la infraestructura digital de las empresas, facilitando su adaptación a los nuevos retos del mercado global",
     icon: "bx:bxs-window-alt",
   },
   {
-    title: "On-Demand Components",
+    title: "Donde nos puedes encontrar",
     description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
+      " Tenemos campañas en Instagram o tambien nos puedes encontrar en las exposiciones en ferias de energía   ",
     icon: "bx:bxs-data",
   },
   {
-    title: "Broad Integration",
+    title: "Sistema modular IoT ECOGRID",
     description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
+      "Sensores inteligentes para monitorizar consumo eléctrico, temperatura y humedad",
     icon: "bx:bxs-bot",
   },
   {
-    title: "SEO Enabled",
+    title: "SEO Habilitado",
     description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
+      " Los sitemaps automáticos, los feeds RSS, la paginación y las colecciones sacan el dolor del SEO y la sindicación. ¡Simplemente funciona!",
     icon: "bx:bxs-file-find",
   },
   {
-    title: "Community",
+    title: "Nuestra Comunidad",
     description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
+      "La comunidad en el contexto de MAXIVId&a solutions podría estructurarse como un ecosistema de usuarios, aliados estratégicos y defensores de la marca que comparten un interés común por la eficiencia energética y la sostenibilidad.",
     icon: "bx:bxs-user",
   },
 ];
@@ -44,11 +44,10 @@ const features = [
 
 <div class="mt-16 md:mt-0">
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Aqui esta  Todo lo que necesitas para Escalar al proximo nivel 
+    ¿ Que ofrecemos  ? 
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
+    Desarrollo de dispositivos IoT para la gestión inteligente de recursos energéticos en hogares y pequeñas empresas, combinando telecomunicaciones y energías renovables.
   </p>
 </div>
 
