--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -8,7 +8,7 @@
   Made by <a
     target="_blank"
     rel="noopener"
-    class="hover:underline">
+    class="hover:text-black transition-all 1s">
     Ximena Zuluaga Buritica - Mariana Yang - Violeta Nieto Jiménez - Daniel Aparisi Lozano
   </a>
 </p>
