--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -22,9 +22,7 @@ import logoImg from "@/assets/logoImg.jpg"
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
       “MAXIVId&a solutions” 
-      un servicio de compra, venta y reacondicionamiento, como
-      también de ofrecer soluciones innovadoras y cómodas a las empresas del sector
-      manufacturero, industrial y productivo de España.
+       es una empresa tecnológica que se dedica a la digitalización del sector industrial y manufacturero en España brindando un servicio de compra, venta y reacondicionamiento, como también de ofrecer soluciones innovadoras y cómodas a las empresas del sector manufacturero, industrial y productivo de España.
     </p>
   </div>
 </main>
