info hero section donde

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -77,7 +77,7 @@ const menuitems = [
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <Link href="#" size="md">Iniciar session</Link>
+        <Link href="#" size="md">Iniciar sesión</Link>
       </div>
     </div>
   </header>
