--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,11 +1,11 @@
 
 <footer class="my-20">
 <p class="text-center text-sm text-slate-500">
-  Copyright © {new Date().getFullYear()} MAXIVId&a solutions. All rights reserved.
+  Copyright © {new Date().getFullYear()} MAXIVId&a solutions.Todos los derechos reservados.
 </p>
 
 <p class="text-center text-xs text-slate-500 mt-1">
-  Made by <a
+  Hecho por  <a
     target="_blank"
     rel="noopener"
     class="hover:text-black transition-all 1s">
