--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -7,9 +7,9 @@ import { Icon } from "astro-icon/components";
   <h2 class="text-center text-slate-500">Colaboramos con</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
 
-    <img src="../../public/Greenpeace_logo.svg" alt="size-8 md:size-12" class=" size-16 md:size-12">
-    <img src="../../public/Media_Markt_logo.svg" alt="" class="size-20 md:size-12">
-    <img src="../../public/universidad_de_alcala.png" alt="" class="size-20 md:size-12 w-[151]">
+    <img src="/Greenpeace_logo.svg" alt="size-8 md:size-12" class=" size-16 md:size-12">
+    <img src="/Media_Markt_logo.svg" alt="" class="size-20 md:size-12">
+    <img src="/universidad_de_alcala.png" alt="" class="size-20 md:size-12 w-[151]">
    
   </div>
 </div>
