--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -9,7 +9,7 @@
     target="_blank"
     rel="noopener"
     class="hover:text-black transition-all 1s">
-    Ximena Zuluaga Buritica - Mariana Yang - Violeta Nieto Jiménez - Daniel Aparisi Lozano
+    Ximena Zuluaga Buritica - Mariana Yang - Violeta Nieto Jiménez - Daniel Aparisi Lozano - Adrian Alexis 
   </a>
 </p>
 </footer>
